--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10208,3 +10208,15 @@ a.text-dark:hover, a.text-dark:focus {
   -o-object-fit: contain;
      object-fit: contain;
 }
+
+.form-group label {
+  color: white;
+}
+
+.form-group input {
+  background-color: black;
+}
+
+.form-group button {
+  background-color: black;
+}
