Auto stash before merge of "master" and "origin/master"

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,8 @@
 @import "layout/main";
 
 @import "components/carousel";
+@import "components/jumbotron";
+@import "components/card";
 
 @import "pages/landingpage";
 
