--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -4,4 +4,4 @@ $border-radius-carousel: 50%;
 $dark: #000;
 $gold: #e3c357;
 
-$box-shadow: 0 5px 5px rgba($gold, .15)
+$box-shadow: 5px 5px 0 rgba($gold, .30)
