--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 @import "layout/main";
+@import "layout/footer";
 
 @import "components/carousel";
 @import "components/jumbotron";
