--- a/resources/sass/components/_card.scss
+++ b/resources/sass/components/_card.scss
@@ -1,5 +1,7 @@
 .card{
-  margin: 5% 10%;
+  width: 330px;
+  height: 620px;
+  margin: 5% auto;
   border-radius: 15px;
   border: 1px solid $gold;
   background: transparent;
