--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10209,7 +10209,37 @@ a.text-dark:hover, a.text-dark:focus {
      object-fit: contain;
 }
 
-.form-group label {
+.jumbotron {
+  background: #000;
+}
+
+.card {
+  margin: 5% 10%;
+  border-radius: 15px;
+  border: 1px solid #e3c357;
+  background: transparent;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.card:hover {
+  background: rgba(128, 128, 128, 0.3);
+  box-shadow: 0 5px 5px rgba(227, 195, 87, 0.15);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.card img {
+  max-width: 300px;
+  margin: auto;
+}
+
+.card * {
+  color: #fff;
+  text-align: center;
+}
+
+.form-group {
   color: white;
 }
 
@@ -10217,6 +10247,18 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: black;
 }
 
-.form-group button {
+button {
   background-color: black;
+  margin-top: 50px;
+}
+
+.contact {
+  text-align: center;
+  color: white;
+  margin-top: 90px;
+  font-size: 7em;
+}
+
+.container {
+  margin-top: 90px;
 }
