--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,8 @@
 @import "components/carousel";
 @import "components/jumbotron";
 @import "components/card";
+@import "components/wave";
+@import "components/form";
 
 @import "pages/landingpage";
 
