--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,12 +3,11 @@
 @import "~bootstrap/scss/bootstrap";
 
 @import "layout/main";
-@import "layout/footer";
 
 @import "components/carousel";
 @import "components/jumbotron";
 @import "components/card";
-@import "components/wave";
+@import "components/gear";
 @import "components/form";
 
 @import "pages/landingpage";
