--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,3 +5,6 @@ $dark: #000;
 $gold: #e3c357;
 
 $box-shadow: 5px 5px 0 rgba($gold, .30);
+$box-shadow-white: 1px 1px 5px 2px rgba(white, .30);
+
+$box-shadow-gold: 5px 5px 0 rgba($gold, .30);
