--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,7 +25,7 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
-  --dark: #000;
+  --dark: #343a40;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -1895,23 +1895,23 @@ pre code {
 .table-dark,
 .table-dark > th,
 .table-dark > td {
-  background-color: #b8b8b8;
+  background-color: #c6c8ca;
 }
 
 .table-dark th,
 .table-dark td,
 .table-dark thead th,
 .table-dark tbody + tbody {
-  border-color: #7a7a7a;
+  border-color: #95999c;
 }
 
 .table-hover .table-dark:hover {
-  background-color: #ababab;
+  background-color: #b9bbbe;
 }
 
 .table-hover .table-dark:hover > td,
 .table-hover .table-dark:hover > th {
-  background-color: #ababab;
+  background-color: #b9bbbe;
 }
 
 .table-active,
@@ -2815,39 +2815,39 @@ fieldset:disabled a.btn {
 
 .btn-dark {
   color: #fff;
-  background-color: #000;
-  border-color: #000;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-dark:hover {
   color: #fff;
-  background-color: black;
-  border-color: black;
+  background-color: #23272b;
+  border-color: #1d2124;
 }
 
 .btn-dark:focus, .btn-dark.focus {
   color: #fff;
-  background-color: black;
-  border-color: black;
-  box-shadow: 0 0 0 0.2rem rgba(38, 38, 38, 0.5);
+  background-color: #23272b;
+  border-color: #1d2124;
+  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
 }
 
 .btn-dark.disabled, .btn-dark:disabled {
   color: #fff;
-  background-color: #000;
-  border-color: #000;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active,
 .show > .btn-dark.dropdown-toggle {
   color: #fff;
-  background-color: black;
-  border-color: black;
+  background-color: #1d2124;
+  border-color: #171a1d;
 }
 
 .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus,
 .show > .btn-dark.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 38, 38, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
 }
 
 .btn-outline-primary {
@@ -3075,35 +3075,35 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-dark {
-  color: #000;
-  border-color: #000;
+  color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-outline-dark:hover {
   color: #fff;
-  background-color: #000;
-  border-color: #000;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-outline-dark:focus, .btn-outline-dark.focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 
 .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-  color: #000;
+  color: #343a40;
   background-color: transparent;
 }
 
 .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active,
 .show > .btn-outline-dark.dropdown-toggle {
   color: #fff;
-  background-color: #000;
-  border-color: #000;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-dark.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 
 .btn-link {
@@ -5231,17 +5231,17 @@ a.badge-light:focus, a.badge-light.focus {
 
 .badge-dark {
   color: #fff;
-  background-color: #000;
+  background-color: #343a40;
 }
 
 a.badge-dark:hover, a.badge-dark:focus {
   color: #fff;
-  background-color: black;
+  background-color: #1d2124;
 }
 
 a.badge-dark:focus, a.badge-dark.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 
 .jumbotron {
@@ -5390,17 +5390,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-dark {
-  color: black;
-  background-color: #cccccc;
-  border-color: #b8b8b8;
+  color: #1b1e21;
+  background-color: #d6d8d9;
+  border-color: #c6c8ca;
 }
 
 .alert-dark hr {
-  border-top-color: #ababab;
+  border-top-color: #b9bbbe;
 }
 
 .alert-dark .alert-link {
-  color: black;
+  color: #040505;
 }
 
 @-webkit-keyframes progress-bar-stripes {
@@ -5817,19 +5817,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-dark {
-  color: black;
-  background-color: #b8b8b8;
+  color: #1b1e21;
+  background-color: #c6c8ca;
 }
 
 .list-group-item-dark.list-group-item-action:hover, .list-group-item-dark.list-group-item-action:focus {
-  color: black;
-  background-color: #ababab;
+  color: #1b1e21;
+  background-color: #b9bbbe;
 }
 
 .list-group-item-dark.list-group-item-action.active {
   color: #fff;
-  background-color: black;
-  border-color: black;
+  background-color: #1b1e21;
+  border-color: #1b1e21;
 }
 
 .close {
@@ -6786,13 +6786,13 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #000 !important;
+  background-color: #343a40 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
 button.bg-dark:focus {
-  background-color: black !important;
+  background-color: #1d2124 !important;
 }
 
 .bg-white {
@@ -6872,7 +6872,7 @@ button.bg-dark:focus {
 }
 
 .border-dark {
-  border-color: #000 !important;
+  border-color: #343a40 !important;
 }
 
 .border-white {
@@ -10044,11 +10044,11 @@ a.text-light:hover, a.text-light:focus {
 }
 
 .text-dark {
-  color: #000 !important;
+  color: #343a40 !important;
 }
 
 a.text-dark:hover, a.text-dark:focus {
-  color: black !important;
+  color: #121416 !important;
 }
 
 .text-body {
@@ -10179,6 +10179,36 @@ a.text-dark:hover, a.text-dark:focus {
   min-height: calc(100vh - 56px);
 }
 
+li {
+  min-width: 50px;
+}
+
+li a {
+  text-decoration: none;
+  line-height: 70px;
+  padding: 0 10px;
+  text-align: center;
+  font-size: 1.3em;
+  color: #e3c357;
+  text-transform: uppercase;
+}
+
+li a:before {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  transition: width .5s ease, background-color .5s ease;
+}
+
+li a:hover:before {
+  width: 90%;
+  background: #e3c357;
+}
+
 .carousel {
   height: calc(100vh - 56px);
   margin: auto;
@@ -10210,7 +10240,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .jumbotron {
-  background: #000;
+  background: #343a40;
   border-radius: 0;
 }
 
@@ -10251,7 +10281,15 @@ a.text-dark:hover, a.text-dark:focus {
 .card-lg {
   background: #6c757d;
   border-radius: 0.25rem;
-  box-shadow: 1px 1px 5px 2px rgba(255, 255, 255, 0.3);
+  box-shadow: 1px 1px 2px 0px rgba(255, 255, 255, 0.3), -1px -1px 2px 0px rgba(227, 195, 87, 0.3);
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
+}
+
+.card-lg:hover {
+  box-shadow: inset -1px -1px 2px 0px rgba(227, 195, 87, 0.3), inset 1px 1px 2px 0px rgba(255, 255, 255, 0.3);
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
 }
 
 .card-lg img {
@@ -10261,9 +10299,17 @@ a.text-dark:hover, a.text-dark:focus {
 .card-sm {
   background: #6c757d;
   border-radius: 0.25rem;
-  box-shadow: 1px 1px 5px 2px rgba(255, 255, 255, 0.3);
+  box-shadow: 1px 1px 2px 0px rgba(255, 255, 255, 0.3), -1px -1px 2px 0px rgba(227, 195, 87, 0.3);
   margin-bottom: 10px;
   max-width: 300px;
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
+}
+
+.card-sm:hover {
+  box-shadow: inset -1px -1px 2px 0px rgba(227, 195, 87, 0.3), inset 1px 1px 2px 0px rgba(255, 255, 255, 0.3);
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
 }
 
 .card-sm img {
@@ -10329,6 +10375,64 @@ button {
 
 .container {
   margin-top: 90px;
+}
+
+.typewriter h1 {
+  margin: 40px;
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  letter-spacing: .15em;
+  /* Adjust as needed */
+  -webkit-animation: typing 3.5s steps(30, end), blink-caret 0.5s step-end infinite;
+          animation: typing 3.5s steps(30, end), blink-caret 0.5s step-end infinite;
+}
+
+/* The typing effect */
+@-webkit-keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@-webkit-keyframes blink-caret {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #e3c357;
+  }
+  100% {
+    border-color: transparent;
+  }
+}
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #e3c357;
+  }
+  100% {
+    border-color: transparent;
+  }
 }
 
 .form-group {
