--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,10 +1,10 @@
 $body-bg: #000;
 
 $border-radius-carousel: 50%;
-$dark: #000;
+//$dark: #000;
 $gold: #e3c357;
 
 $box-shadow: 5px 5px 0 rgba($gold, .30);
-$box-shadow-white: 1px 1px 5px 2px rgba(white, .30);
+$box-shadow-white: 1px 1px 2px 0px rgba(white, .30);
 
-$box-shadow-gold: 5px 5px 0 rgba($gold, .30);
+$box-shadow-gold: -1px -1px 2px 0px rgba($gold, .30);
