--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,12 +3,14 @@
 @import "~bootstrap/scss/bootstrap";
 
 @import "layout/main";
+@import "layout/header";
 
 @import "components/carousel";
 @import "components/jumbotron";
 @import "components/card";
 @import "components/gear";
 @import "components/form";
+@import "components/h1";
 
 @import "pages/landingpage";
 
