update: marque problème

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 @import "components/gear";
 @import "components/form";
 @import "components/h1";
+@import "components/caviar";
 
 @import "pages/landingpage";
 
