--- a/resources/sass/components/_caviar.scss
+++ b/resources/sass/components/_caviar.scss
@@ -1,3 +1,11 @@
 .caviar {
-color: red;
+  text-align:center;
+  color: $white;
+  font-size:10em;
+}
+.paragraph {
+  color: $white;
+}
+.slogan {
+  color: $white;
 }
