--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -11,11 +11,19 @@ button {
   margin-top: 50px;
 }
 .contact {
+  transform: rotate(90deg);
+  margin-top: 300px;
+  margin-left:-300px;
+  @include float-left;
   text-align: center;
   color: white;
-  margin-top: 90px;
   font-size: 7em;
 }
+
+.contact {
+
+}
+
 .container {
   margin-top:90px;
 }
