--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@
 @import "layout/main";
 @import "layout/header";
 
-@import "components/carousel";
+@import "components/golden";
 @import "components/jumbotron";
 @import "components/card";
 @import "components/gear";
