update contact, navbar,page produit

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10377,6 +10377,17 @@ button {
   font-size: 7em;
 }
 
+@media (max-width: 1200px) {
+  .contact {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    font-size: 3em;
+    float: none !important;
+    margin-top: 50px;
+    margin-left: 0px;
+  }
+}
+
 .container {
   margin-top: 90px;
 }
@@ -10475,6 +10486,17 @@ button {
   text-align: center;
   color: white;
   font-size: 7em;
+}
+
+@media (max-width: 1200px) {
+  .contact {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    font-size: 3em;
+    float: none !important;
+    margin-top: 50px;
+    margin-left: 0px;
+  }
 }
 
 .container {
