--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,8 @@
 @import "components/form";
 @import "components/h1";
 @import "components/caviar";
+@import "components/img";
+@import "components/blockquote";
 
 @import "pages/landingpage";
 
