--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,7 +10,7 @@
 @import "components/card";
 @import "components/gear";
 @import "components/form";
-@import "components/h1";
+@import "components/hn";
 @import "components/caviar";
 @import "components/img";
 @import "components/blockquote";
