--- a/resources/sass/layout/_main.scss
+++ b/resources/sass/layout/_main.scss
@@ -5,5 +5,10 @@
   padding: 0;
   margin: 0;
   color: $white;
-  font-family: 'Dancing Script', cursive !important;
+  font-family: 'Dancing Script', cursive;
+}
+.bg-fix{
+  padding: 100px;
+  background: no-repeat center;
+  //box-shadow: inset 0 0 2px 2px rgb($black, .30);
 }
