--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10419,7 +10419,7 @@ button {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   margin-top: 300px;
-  margin-left: -300px;
+  margin-left: -200px;
   float: left !important;
   text-align: center;
   color: white;
@@ -10438,7 +10438,11 @@ button {
 }
 
 .container {
-  margin-top: 90px;
+  margin-top: 150px;
+}
+
+.ligne-bas {
+  margin-top: 250px;
 }
 
 .typewriter h1 {
@@ -10519,6 +10523,10 @@ button {
   color: #fff;
 }
 
+.vieux {
+  padding-top: 100px;
+}
+
 .img {
   max-width: 500px;
   margin: auto;
@@ -10586,7 +10594,7 @@ button {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   margin-top: 300px;
-  margin-left: -300px;
+  margin-left: -200px;
   float: left !important;
   text-align: center;
   color: white;
@@ -10605,5 +10613,9 @@ button {
 }
 
 .container {
-  margin-top: 90px;
+  margin-top: 150px;
+}
+
+.ligne-bas {
+  margin-top: 250px;
 }
