--- a/resources/sass/components/_caviar.scss
+++ b/resources/sass/components/_caviar.scss
@@ -1,15 +1,37 @@
 .caviar {
-  color: red;
+    @media (max-width: 1200px){
+      font-size:5em;
+      margin-top: -70px;
+    }
   text-align:center;
   color: $white;
   font-size:10em;
 }
 .paragraph {
+  @media (max-width: 1200px){
+    margin-top:100px;
+    font-family: "Baskerville Old Face";
+  }
+  font-size: 1.5em;
+  font-family: "Baskerville Old Face";
   color: $white;
+  margin-top: 100px;
 }
 .slogan {
+  @media (max-width: 1200px){
+    margin-top:-900px;
+    margin-right: -1700px;
+    font-size: 1em;
+    transform: rotate(25deg);
+  }
+  margin-top: -300px;
   color: $white;
+  transform: rotate(25deg);
+  font-size: 2em;
 }
 .vieux {
-  padding-top: 100px;
+  @include float-right;
+  @media (max-width: 1200px) {
+    margin-top: 100px;
+  }
 }
