--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,7 @@
 
 @import "layout/main";
 @import "layout/header";
+@import "layout/footer";
 
 @import "components/golden";
 @import "components/jumbotron";
@@ -14,8 +15,6 @@
 @import "components/caviar";
 @import "components/img";
 @import "components/blockquote";
+@import "components/form";
 
 @import "pages/landingpage";
-
-@import "components/form";
-@import "components/footer";
