--- a/resources/sass/components/_img.scss
+++ b/resources/sass/components/_img.scss
@@ -2,7 +2,13 @@
   max-width: 500px;
   margin: auto;
   display: block;
+  border-radius: $border-radius;
+  box-shadow: 0 0 5px 0 rgba(255, 255, 255, 0.15);
+  &:hover{
+    box-shadow: 0 0 7px 0 rgba(255, 255, 255, 0.15);
+  }
 }
+
 .tweet{
   margin: 10px;
 }
