--- a/resources/sass/layout/_main.scss
+++ b/resources/sass/layout/_main.scss
@@ -6,9 +6,9 @@
   margin: 0;
   color: $white;
   font-family: 'Dancing Script', cursive;
+  text-decoration: none;
 }
 .bg-fix{
   padding: 100px;
-  background: no-repeat center;
-  //box-shadow: inset 0 0 2px 2px rgb($black, .30);
+  background: no-repeat center fixed;
 }
