--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,5 +16,6 @@
 @import "components/img";
 @import "components/blockquote";
 @import "components/form";
+@import "components/btn";
 
 @import "pages/landingpage";
