--- a/resources/sass/components/_img.scss
+++ b/resources/sass/components/_img.scss
@@ -4,9 +4,25 @@
   display: block;
   border-radius: $border-radius;
   box-shadow: 0 0 5px 0 rgba(255, 255, 255, 0.15);
+  &:after{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    content: '>';
+    width: 50px;
+    height: 50px;
+    display: block;
+    background-image: url(../image/quote.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    transform: rotate(180deg);
+    vertical-align: baseline;
+  }
   &:hover{
     box-shadow: 0 0 7px 0 rgba(255, 255, 255, 0.15);
   }
+
 }
 
 .tweet{
