--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,5 +17,6 @@
 @import "components/blockquote";
 @import "components/form";
 @import "components/btn";
+@import "components/politique";
 
 @import "pages/landingpage";
