--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10715,3 +10715,23 @@ button {
   text-decoration: none;
   color: #e3c357;
 }
+
+.politique {
+  text-align: center;
+}
+
+.politique h2 {
+  font-family: "Baskerville Old Face";
+}
+
+.politique a {
+  font-family: "Baskerville Old Face";
+}
+
+.politique h3 {
+  font-family: "Baskerville Old Face";
+}
+
+.politique p {
+  font-family: "Baskerville Old Face";
+}
